--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,7 @@
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
-    <h1 class="page-header">Dashboard <small>header small text goes here...</small></h1>
+    <h1 class="page-header">Dashboard <small>Indicadores Importantes</small></h1>
     <!-- end page-header -->
     
     <!-- begin row -->
