data in table personal 2

--- a/views/personal_todos.html
+++ b/views/personal_todos.html
@@ -47,12 +47,20 @@
                             <td>+56 2 1125 2251</td>
                         </tr>
                         <tr class="odd gradeX">
-                            <td>19558557</td>
+                            <td>14558558</td>
                             <td>Jorje Juan Matamala Duran</td>
                             <td>Masculino</td>
                             <td>22/05/1941</td>
                             <td>FEDEX</td>
                             <td>+56 2 1125 2250</td>
+                        </tr>
+                        <tr class="odd gradeX">
+                            <td>10534557</td>
+                            <td>Carlos Miranda Miranda</td>
+                            <td>Masculino</td>
+                            <td>28/05/1961</td>
+                            <td>ChileExpress</td>
+                            <td>+56 2 1125 2220</td>
                         </tr>
 
                         </tbody>
