--- a/views/personal_crear.html
+++ b/views/personal_crear.html
@@ -7,7 +7,7 @@
     </ol>
     <!-- end breadcrumb -->
     <!-- begin page-header -->
-    <h1 class="page-header">Form Elements <small>header small text goes here...</small></h1>
+    <h1 class="page-header">Personal Crear <small>Formulario de Ingreso</small></h1>
     <!-- end page-header -->
 
     <!-- begin row -->
@@ -23,13 +23,19 @@
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
                     </div>
-                    <h4 class="panel-title">Input Types</h4>
+                    <h4 class="panel-title">Formulario Creación de personal</h4>
                 </div>
                 <div class="panel-body">
                     <form class="form-horizontal">
                         <div class="form-group">
-                            <label class="col-md-3 control-label">Default Input</label>
+                            <label class="col-md-3 control-label">Nombre Completo</label>
                             <div class="col-md-9">
+                                <input type="text" class="form-control" placeholder="Default input" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">-</label>
+                            <div class="col-md-1">
                                 <input type="text" class="form-control" placeholder="Default input" />
                             </div>
                         </div>
