--- a/views/personal_crear.html
+++ b/views/personal_crear.html
@@ -30,19 +30,19 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Nombre Completo</label>
                             <div class="col-md-7">
-                                <input type="text" class="form-control" placeholder="Default input" />
+                                <input type="text" class="form-control" placeholder="Juan Alejandro Gonzalez Valdevenito" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">RUN</label>
+                            <div class="col-md-5">
+                                <input type="text" class="form-control" placeholder="14587989" />
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-md-3 control-label">-</label>
                             <div class="col-md-1">
-                                <input type="text" class="form-control" placeholder="Default input" />
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-md-3 control-label">Disabled Input</label>
-                            <div class="col-md-9">
-                                <input type="text" class="form-control" placeholder="Disabled input" disabled />
+                                <input type="text" class="form-control" placeholder="5" />
                             </div>
                         </div>
                         <div class="form-group">
