--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -25,7 +25,7 @@
                     <span>Dashboard</span>
                 </a>
                 <ul class="sub-menu">
-                    <li ui-sref-active="active"><a ui-sref="app.dashboard.v1">Dashboard</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.dashboard">Dashboard</a></li>
                     
                 </ul>
             </li>
