--- a/views/personal_crear.html
+++ b/views/personal_crear.html
@@ -44,14 +44,12 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-md-3 control-label">Select</label>
+                            <label class="col-md-3 control-label">Sexo</label>
                             <div class="col-md-9">
                                 <select class="form-control">
-                                    <option>1</option>
-                                    <option>2</option>
-                                    <option>3</option>
-                                    <option>4</option>
-                                    <option>5</option>
+                                    <option>Masculino</option>
+                                    <option>Femenino</option>
+                                    <option>Otro</option>
                                 </select>
                             </div>
                         </div>
