--- a/views/personal_crear.html
+++ b/views/personal_crear.html
@@ -38,7 +38,7 @@
                             <div class="col-md-5">
                                 <input type="text" class="form-control" placeholder="14587989" />
                             </div>
-                            <label class="col-md-3 control-label">-</label>
+                            <label class="col-md-1 control-label">-</label>
                             <div class="col-md-1">
                                 <input type="text" class="form-control" placeholder="5" />
                             </div>
@@ -51,6 +51,18 @@
                                     <option>Femenino</option>
                                     <option>Otro</option>
                                 </select>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Fecha de Nacimiento</label>
+                            <div class="col-md-4">
+                                <input  class="datepicker" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Nombre Completo</label>
+                            <div class="col-md-9">
+                                <input type="text" class="form-control" placeholder="Juan Alejandro Gonzalez Valdevenito" />
                             </div>
                         </div>
                         <div class="form-group">
