--- a/views/personal_crear.html
+++ b/views/personal_crear.html
@@ -35,7 +35,7 @@
                         </div>
                         <div class="form-group">
                             <label class="col-md-3 control-label">RUN</label>
-                            <div class="col-md-5">
+                            <div class="col-md-3">
                                 <input type="text" class="form-control" placeholder="14587989" />
                             </div>
                             <label class="col-md-1 control-label">-</label>
@@ -55,8 +55,13 @@
                         </div>
                         <div class="form-group">
                             <label class="col-md-3 control-label">Fecha de Nacimiento</label>
-                            <div class="col-md-4">
-                                <input  class="datepicker" />
+                            <div class="col-md-6">
+                                <p class="input-group">
+                                    <input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="dt" is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" />
+                                    <span class="input-group-btn">
+                                         <button type="button" class="btn btn-default" ng-click="open1()"><i class="glyphicon glyphicon-calendar"></i></button>
+                                     </span>
+                                </p>
                             </div>
                         </div>
                         <div class="form-group">
