--- a/views/personal_crear.html
+++ b/views/personal_crear.html
@@ -65,6 +65,17 @@
                             </div>
                         </div>
                         <div class="form-group">
+                            <label class="col-md-3 control-label">Estado civil</label>
+                            <div class="col-md-9">
+                                <select class="form-control">
+                                    <option>Soltero</option>
+                                    <option>Casado</option>
+                                    <option>Viudo</option>
+                                    <option>Otro</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group">
                             <label class="col-md-3 control-label">Nombre Completo</label>
                             <div class="col-md-9">
                                 <input type="text" class="form-control" placeholder="Juan Alejandro Gonzalez Valdevenito" />
