Personal Date Line 3

--- a/views/personal_crear.html
+++ b/views/personal_crear.html
@@ -1,4 +1,4 @@
-<div>
+<div ng-controller="CrearPersonalController">
     <!-- begin breadcrumb -->
     <ol class="breadcrumb pull-right">
         <li><a href="javascript:;">Home</a></li>
