--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -31,7 +31,7 @@
             </li>
             <li class="has-sub" ng-class="{active:$state.includes('app.personal')}">
                 <a href="javascript:;">
-                    
+                    <b class="caret pull-right"></b>
                     <i class="fa fa-user"></i> 
                     <span>Personal</span>
                 </a>
