--- a/views/personal_crear.html
+++ b/views/personal_crear.html
@@ -76,11 +76,53 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-md-3 control-label">Nombre Completo</label>
+                            <label class="col-md-3 control-label">Dirección</label>
                             <div class="col-md-9">
-                                <input type="text" class="form-control" placeholder="Juan Alejandro Gonzalez Valdevenito" />
+                                <input type="text" class="form-control" placeholder="AV. El Belloto 561" />
                             </div>
                         </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Comuna</label>
+                            <div class="col-md-9">
+                                <select class="form-control">
+                                    <option>1 Arica</option>
+                                    <option>2 Antofagasta</option>
+                                    <option>3 Santiago</option>
+                                    <option>Otro</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Region</label>
+                            <div class="col-md-9">
+                                <select class="form-control">
+                                    <option>15 Arica y Parinacota</option>
+                                    <option>1 Tarapaca</option>
+                                    <option>2 Antofagasta</option>
+                                    <option>Otro</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Pais</label>
+                            <div class="col-md-9">
+                                <select class="form-control">
+                                    <option>1 Chile</option>
+                                    <option>2 Peru</option>
+                                    <option>3 Argentina</option>
+                                    <option>Otro</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Codigo Postal</label>
+                            <div class="col-md-5">
+                                <input type="text" class="form-control" placeholder="7854126" />
+                            </div>
+                        </div>
+
+
+
                         <div class="form-group">
                             <label class="col-md-3 control-label">Select (multiple)</label>
                             <div class="col-md-9">
