--- a/views/personal_crear.html
+++ b/views/personal_crear.html
@@ -77,8 +77,13 @@
                         </div>
                         <div class="form-group">
                             <label class="col-md-3 control-label">Dirección</label>
-                            <div class="col-md-9">
-                                <input type="text" class="form-control" placeholder="AV. El Belloto 561" />
+                            <div class="col-md-5">
+                                <input type="text" class="form-control" placeholder="AV. El Belloto" />
+                            </div>
+                        </div>
+                            <label class="col-md-2 control-label">Numero</label>
+                            <div class="col-md-1">
+                                <input type="text" class="form-control" placeholder="AV. El Belloto" />
                             </div>
                         </div>
                         <div class="form-group">
@@ -120,44 +125,97 @@
                                 <input type="text" class="form-control" placeholder="7854126" />
                             </div>
                         </div>
-
-
-
                         <div class="form-group">
-                            <label class="col-md-3 control-label">Select (multiple)</label>
+                            <label class="col-md-3 control-label">Dirección  Trabajo</label>
                             <div class="col-md-9">
-                                <select multiple class="form-control">
-                                    <option>1</option>
-                                    <option>2</option>
-                                    <option>3</option>
-                                    <option>4</option>
-                                    <option>5</option>
+                                <input type="text" class="form-control" placeholder="AV. El Belloto 561" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Fecha de Incorporación</label>
+                            <div class="col-md-6">
+                                <p class="input-group">
+                                    <input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="dt" is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" />
+                                    <span class="input-group-btn">
+                                         <button type="button" class="btn btn-default" ng-click="open1()"><i class="glyphicon glyphicon-calendar"></i></button>
+                                     </span>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Fecha de Termino</label>
+                            <div class="col-md-6">
+                                <p class="input-group">
+                                    <input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="dt" is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" />
+                                    <span class="input-group-btn">
+                                         <button type="button" class="btn btn-default" ng-click="open1()"><i class="glyphicon glyphicon-calendar"></i></button>
+                                     </span>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Años Experiencia</label>
+                            <div class="col-md-9">
+                                <select class="form-control">
+                                    <option>0</option>
+                                    <option>1-2</option>
+                                    <option>2-5</option>
+                                    <option>5-10</option>
+                                    <option>10-20</option>
+                                    <option>+20</option>
                                 </select>
                             </div>
                         </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Seguro Medico</label>
+                            <div class="col-md-9">
+                                <div class="checkbox">
+                                    <label>
+                                        <input type="checkbox" value="" />
+                                        Personal
+                                    </label>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Telefono Personal</label>
+                            <div class="col-md-9">
+                                <input type="text" class="form-control" placeholder="+56 2 2251 1441" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Celular Personal</label>
+                            <div class="col-md-9">
+                                <input type="text" class="form-control" placeholder="+56 9 3105 2252" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Personal Contacto</label>
+                            <div class="col-md-9">
+                                <input type="text" class="form-control" placeholder="Maria Luisa Catalan" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Contacto Telefono</label>
+                            <div class="col-md-9">
+                                <input type="text" class="form-control" placeholder="+56 2 5445 4445" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Personal Celular</label>
+                            <div class="col-md-9">
+                                <input type="text" class="form-control" placeholder="+56 9 9165 4154" />
+                            </div>
+                        </div>
+
                         <div class="form-group">
                             <label class="col-md-3 control-label">Textarea</label>
                             <div class="col-md-9">
                                 <textarea class="form-control" placeholder="Textarea" rows="5"></textarea>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label class="col-md-3 control-label">Checkbox</label>
-                            <div class="col-md-9">
-                                <div class="checkbox">
-                                    <label>
-                                        <input type="checkbox" value="" />
-                                        Checkbox Label 1
-                                    </label>
-                                </div>
-                                <div class="checkbox">
-                                    <label>
-                                        <input type="checkbox" value="" />
-                                        Checkbox Label 2
-                                    </label>
-                                </div>
-                            </div>
-                        </div>
+
                         <div class="form-group">
                             <label class="col-md-3 control-label">Inline Checkbox</label>
                             <div class="col-md-9">
