--- a/views/personal_crear.html
+++ b/views/personal_crear.html
@@ -83,7 +83,7 @@
 
                             <label class="col-md-2 control-label">Numero</label>
                             <div class="col-md-1">
-                                <input type="text" class="form-control" placeholder="AV. El Belloto" />
+                                <input type="text" class="form-control" placeholder="16225" />
                             </div>
                         </div>
                         <div class="form-group">
