--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -65,7 +65,7 @@
                     <li ui-sref-active="active"><a ui-sref="app.contrato.buscar">Contratos Buscar</a></li>
                     <li ui-sref-active="active"><a ui-sref="app.contrato.crear">Contratos Crear</a></li>
                     <li ui-sref-active="active"><a ui-sref="app.contrato.editar">Contratos Editar</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.contrato.eliminar">Contratos ELiminar</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.contrato.eliminar">Contratos Eliminar</a></li>
 
                 </ul>
             </li>
@@ -104,10 +104,12 @@
                     <span>Flota </span>
                 </a>
                 <ul class="sub-menu">
-                    <li><a href="../../frontend/one-page-parallax/template_content_html/index.html" target="_blank">One Page Parallax</a></li>
-                    <li><a href="../../frontend/blog/template_content_html/index.html" target="_blank">Blog</a></li>
-                    <li><a href="../../frontend/forum/template_content_html/index.html" target="_blank">Forum</a></li>
-                    <li><a href="../../frontend/e-commerce/template_content_html/index.html" target="_blank">E-Commerce <i class="fa fa-paper-plane text-theme m-l-5"></i></a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.flota.todos">Contratos</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.flota.buscar">Contratos Buscar</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.flota.crear">Contratos Crear</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.flota.editar">Contratos Editar</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.flota.eliminar">Contratos Eliminar</a></li>
+
                 </ul>
             </li>
            
