--- a/views/flota_todos.html
+++ b/views/flota_todos.html
@@ -1,4 +1,4 @@
-div ng-controller="tablaPersonalDefaultController">
+<div ng-controller="tablaFlotaDefaultController">
 <!-- begin breadcrumb -->
 <ol class="breadcrumb pull-right">
     <li><a href="javascript:;">Home</a></li>
