--- a/views/flota_todos.html
+++ b/views/flota_todos.html
@@ -7,7 +7,7 @@
 </ol>
 <!-- end breadcrumb -->
 <!-- begin page-header -->
-<h1 class="page-header">Tabla Personal <small>Servicio de Transporte</small></h1>
+<h1 class="page-header">Tabla Flota <small>Vehiculos de Transporte</small></h1>
 <!-- end page-header -->
 
 <!-- begin row -->
@@ -29,38 +29,30 @@
                 <table id="data-table" class="table table-striped table-bordered">
                     <thead>
                     <tr>
-                        <th>Rut</th>
-                        <th>Nombre</th>
-                        <th>Sexo</th>
-                        <th>Fecha Nacimiento</th>
+                        <th>Patente</th>
                         <th>Proveedor</th>
-                        <th>Telefono</th>
+                        <th>Marca</th>
+                        <th>Modelo</th>
+                        <th>Peso Despacho</th>
+                        <th>Volumen</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr class="odd gradeX">
-                        <td>14558557</td>
-                        <td>Juan Carlos Matamala Duran</td>
-                        <td>Masculino</td>
-                        <td>22/05/1941</td>
+                        <td>HVCV-80</td>
                         <td>FEDEX</td>
-                        <td>+56 2 1125 2251</td>
+                        <td>MERCEDES-BENZ</td>
+                        <td>SPRINTER</td>
+                        <td>1520</td>
+                        <td>20</td>
                     </tr>
                     <tr class="odd gradeX">
-                        <td>14558558</td>
-                        <td>Jorje Juan Matamala Duran</td>
-                        <td>Masculino</td>
-                        <td>22/05/1941</td>
+                        <td>HVCV-82</td>
                         <td>FEDEX</td>
-                        <td>+56 2 1125 2250</td>
-                    </tr>
-                    <tr class="odd gradeX">
-                        <td>10534557</td>
-                        <td>Carlos Miranda Miranda</td>
-                        <td>Masculino</td>
-                        <td>28/05/1961</td>
-                        <td>ChileExpress</td>
-                        <td>+56 2 1125 2220</td>
+                        <td>MERCEDES-BENZ</td>
+                        <td>SPRINTER</td>
+                        <td>2500</td>
+                        <td>40</td>
                     </tr>
 
                     </tbody>
