--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -104,11 +104,11 @@
                     <span>Flota </span>
                 </a>
                 <ul class="sub-menu">
-                    <li ui-sref-active="active"><a ui-sref="app.flota.todos">Contratos</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.flota.buscar">Contratos Buscar</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.flota.crear">Contratos Crear</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.flota.editar">Contratos Editar</a></li>
-                    <li ui-sref-active="active"><a ui-sref="app.flota.eliminar">Contratos Eliminar</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.flota.todos">Flota</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.flota.buscar">Flota Buscar</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.flota.crear">Flota Crear</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.flota.editar">Flota Editar</a></li>
+                    <li ui-sref-active="active"><a ui-sref="app.flota.eliminar">Flota Eliminar</a></li>
 
                 </ul>
             </li>
