--- a/views/flota_todos.html
+++ b/views/flota_todos.html
@@ -54,6 +54,22 @@
                         <td>2500</td>
                         <td>40</td>
                     </tr>
+                    <tr class="odd gradeX">
+                        <td>BBCD-02</td>
+                        <td>TRANSPORTES DEL PACIFICO</td>
+                        <td>MACK</td>
+                        <td>TITAN</td>
+                        <td>9500</td>
+                        <td>90</td>
+                    </tr>
+                    <tr class="odd gradeX">
+                        <td>CCDE-02</td>
+                        <td>TRANSPORTES DEL PACIFICO</td>
+                        <td>MACK</td>
+                        <td>TITAN</td>
+                        <td>9500</td>
+                        <td>90</td>
+                    </tr>
 
                     </tbody>
                 </table>
