--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -54,7 +54,7 @@
                     </li>
                 </ul>
             </li>
-            <li class="has-sub" ng-class="{active:$state.includes('app.ui')}">
+            <li class="has-sub" ng-class="{active:$state.includes('app.contrato')}">
                 <a href="javascript:;">
                     <b class="caret pull-right"></b>
                     <i class="fa fa-suitcase"></i>
@@ -97,7 +97,7 @@
                     </li>
                 </ul>
             </li>
-            <li class="has-sub">
+            <li class="has-sub" ng-class="{active:$state.includes('app.flota')}">
                 <a href="javascript:;">
                     <b class="caret pull-right"></b>
                     <i class="fa fa-truck"></i> 
