--- a/views/flota_todos.html
+++ b/views/flota_todos.html
@@ -2,8 +2,8 @@
 <!-- begin breadcrumb -->
 <ol class="breadcrumb pull-right">
     <li><a href="javascript:;">Home</a></li>
-    <li><a href="javascript:;">Personal</a></li>
-    <li class="active">Tabla Personal</li>
+    <li><a href="javascript:;">Flota</a></li>
+    <li class="active">Tabla Flota</li>
 </ol>
 <!-- end breadcrumb -->
 <!-- begin page-header -->
