--- a/views/flota_crear.html
+++ b/views/flota_crear.html
@@ -81,27 +81,58 @@
                                 <input type="text" class="form-control" placeholder="BLANCO INVIERNO" />
                             </div>
                         </div>
-
                         <div class="form-group">
-                            <label class="col-md-3 control-label">Estado civil</label>
+                            <label class="col-md-3 control-label">Peso Bruto (KG)</label>
+                            <div class="col-md-9">
+                                <input type="text" class="form-control" placeholder="3500" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Peso Tara (KG)</label>
+                            <div class="col-md-9">
+                                <input type="text" class="form-control" placeholder="2500" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Peso Neto (KG)</label>
+                            <div class="col-md-9">
+                                <input type="text" class="form-control" placeholder="2000" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Combustible</label>
                             <div class="col-md-9">
                                 <select class="form-control">
-                                    <option>Soltero</option>
-                                    <option>Casado</option>
-                                    <option>Viudo</option>
+                                    <option>93</option>
+                                    <option>95</option>
+                                    <option>97</option>
+                                    <option>Diesel</option>
+                                    <option>GLP</option>
+                                    <option>Hidrogeno</option>
+                                    <option>Etanol</option>
+                                    <option>Aceite Reciclado</option>
+                                    <option>Electrico</option>
                                     <option>Otro</option>
                                 </select>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <label class="col-md-3 control-label">Dirección</label>
-                            <div class="col-md-5">
-                                <input type="text" class="form-control" placeholder="AV. El Belloto" />
-                            </div>
 
-                            <label class="col-md-2 control-label">Numero</label>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Volumen (M3)</label>
+                            <div class="col-md-5">
+                                <input type="text" class="form-control" placeholder="40" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-2 control-label">Ancho Vehiculo (Metros)</label>
                             <div class="col-md-1">
-                                <input type="text" class="form-control" placeholder="16225" />
+                                <input type="text" class="form-control" placeholder="16" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Largo Vehiculo (Metros)</label>
+                            <div class="col-md-9">
+                                <input type="text" class="form-control" placeholder="2000" />
                             </div>
                         </div>
                         <div class="form-group">
