--- a/views/flota_crear.html
+++ b/views/flota_crear.html
@@ -119,20 +119,26 @@
 
                         <div class="form-group">
                             <label class="col-md-3 control-label">Volumen (M3)</label>
-                            <div class="col-md-5">
+                            <div class="col-md-3">
                                 <input type="text" class="form-control" placeholder="40" />
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-md-3 control-label">Ancho Vehiculo (Metros)</label>
                             <div class="col-md-3">
-                                <input type="text" class="form-control" placeholder="16" />
+                                <input type="text" class="form-control" placeholder="3.5" />
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-md-3 control-label">Largo Vehiculo (Metros)</label>
-                            <div class="col-md-9">
-                                <input type="text" class="form-control" placeholder="2000" />
+                            <div class="col-md-3">
+                                <input type="text" class="form-control" placeholder="20.6" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Alto Vehiculo (Metros)</label>
+                            <div class="col-md-3">
+                                <input type="text" class="form-control" placeholder="4.1" />
                             </div>
                         </div>
                         <div class="form-group">
