--- a/views/flota_crear.html
+++ b/views/flota_crear.html
@@ -141,49 +141,29 @@
                                 <input type="text" class="form-control" placeholder="4.1" />
                             </div>
                         </div>
+
                         <div class="form-group">
-                            <label class="col-md-3 control-label">Comuna</label>
-                            <div class="col-md-9">
-                                <select class="form-control">
-                                    <option>1 Arica</option>
-                                    <option>2 Antofagasta</option>
-                                    <option>3 Santiago</option>
-                                    <option>Otro</option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-md-3 control-label">Region</label>
-                            <div class="col-md-9">
-                                <select class="form-control">
-                                    <option>15 Arica y Parinacota</option>
-                                    <option>1 Tarapaca</option>
-                                    <option>2 Antofagasta</option>
-                                    <option>Otro</option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-md-3 control-label">Pais</label>
-                            <div class="col-md-9">
-                                <select class="form-control">
-                                    <option>1 Chile</option>
-                                    <option>2 Peru</option>
-                                    <option>3 Argentina</option>
-                                    <option>Otro</option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-md-3 control-label">Codigo Postal</label>
+                            <label class="col-md-3 control-label">Cantidad de Ruedas</label>
                             <div class="col-md-5">
-                                <input type="text" class="form-control" placeholder="7854126" />
+                                <input type="text" class="form-control" placeholder="4" />
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="col-md-3 control-label">Dirección  Trabajo</label>
+                            <label class="col-md-3 control-label">Cantidad de Ejes</label>
                             <div class="col-md-9">
-                                <input type="text" class="form-control" placeholder="AV. El Belloto 561" />
+                                <input type="text" class="form-control" placeholder="4 x 4" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 control-label">Sello Verde</label>
+                            <div class="col-md-9">
+                                <div class="checkbox">
+                                    <label>
+                                        <input type="checkbox" value="" />
+                                        Catalitico
+                                    </label>
+                                </div>
+
                             </div>
                         </div>
                         <div class="form-group">
