--- a/template/header.html
+++ b/template/header.html
@@ -4,7 +4,7 @@
     <div class="container-fluid">
         <!-- begin mobile sidebar expand / collapse button -->
         <div class="navbar-header">
-            <a href="index.html" class="navbar-brand"><img src="assets/img/lapolar.jpg" height="30" width="100"  /> SGT- LA POLAR </a>
+            <a href="index.html" class="navbar-brand"><img src="assets/img/lapolar.jpg" height="30" width="100"  /> </a> SGT- LA POLAR </a>
             <button type="button" class="navbar-toggle" data-click="sidebar-toggled">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
