--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -9,8 +9,8 @@
                     <a href="javascript:;"><img src="assets/img/user-13.jpg" alt="" /></a>
                 </div>
                 <div class="info">
-                    Sean Ngu
-                    <small>Front end developer</small>
+                    Jorge Maestre
+                    <small>Administrador</small>
                 </div>
             </li>
         </ul>
