--- a/views/index.html
+++ b/views/index.html
@@ -16,8 +16,8 @@
             <div class="widget widget-stats bg-green">
                 <div class="stats-icon"><i class="fa fa-desktop"></i></div>
                 <div class="stats-info">
-                    <h4>TOTAL VISITORS</h4>
-                    <p>3,291,922</p>	
+                    <h4>DESPACHOS HOY</h4>
+                    <p>23</p>
                 </div>
                 <div class="stats-link">
                     <a href="javascript:;">View Detail <i class="fa fa-arrow-circle-o-right"></i></a>
@@ -30,8 +30,8 @@
             <div class="widget widget-stats bg-blue">
                 <div class="stats-icon"><i class="fa fa-chain-broken"></i></div>
                 <div class="stats-info">
-                    <h4>BOUNCE RATE</h4>
-                    <p>20.44%</p>	
+                    <h4>DESPACHOS  SATIFACTORIOS</h4>
+                    <p>40.44%</p>
                 </div>
                 <div class="stats-link">
                     <a href="javascript:;">View Detail <i class="fa fa-arrow-circle-o-right"></i></a>
@@ -44,8 +44,8 @@
             <div class="widget widget-stats bg-purple">
                 <div class="stats-icon"><i class="fa fa-users"></i></div>
                 <div class="stats-info">
-                    <h4>UNIQUE VISITORS</h4>
-                    <p>1,291,922</p>	
+                    <h4>DESPACHOS REALIZADOS </h4>
+                    <p>1,922</p>
                 </div>
                 <div class="stats-link">
                     <a href="javascript:;">View Detail <i class="fa fa-arrow-circle-o-right"></i></a>
@@ -58,8 +58,8 @@
             <div class="widget widget-stats bg-red">
                 <div class="stats-icon"><i class="fa fa-clock-o"></i></div>
                 <div class="stats-info">
-                    <h4>AVG TIME ON SITE</h4>
-                    <p>00:12:23</p>	
+                    <h4>PROMEDIO DE DESPACHO TRONCAL</h4>
+                    <p>05:12:23</p>
                 </div>
                 <div class="stats-link">
                     <a href="javascript:;">View Detail <i class="fa fa-arrow-circle-o-right"></i></a>
