--- a/views/index.html
+++ b/views/index.html
@@ -81,7 +81,7 @@
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
                         <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
                     </div>
-                    <h4 class="panel-title">Website Analytics (Last 7 Days)</h4>
+                    <h4 class="panel-title">DESPACHOS ENVIADOS (ULTIMOS 7 DIAS)</h4>
                 </div>
                 <div class="panel-body">
                     <div id="interactive-chart" class="height-sm"></div>
