dashborad fix error datepicker 5

--- a/views/contrato_crear.html
+++ b/views/contrato_crear.html
@@ -731,4 +731,232 @@
                             <div class="col-md-8">
                                 <input type="text" class="form-control" value="rgb(155,89,182,0.8)" id="colorpicker-rgba" data-color-format="rgba" />
                             </div>
-                            &
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-md-4">Default timepicker</label>
+                            <div class="col-md-8">
+                                <div class="input-group bootstrap-timepicker">
+                                    <input id="timepicker" type="text" class="form-control" />
+                                    <span class="input-group-addon"><i class="fa fa-clock-o"></i></span>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <!-- end panel -->
+            <!-- begin panel -->
+            <div class="panel panel-inverse" data-sortable-id="form-plugins-12">
+                <div class="panel-heading">
+                    <div class="panel-heading-btn">
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
+                    </div>
+                    <h4 class="panel-title">Ion Range Slider</h4>
+                </div>
+                <div class="panel-body panel-form">
+                    <form class="form-horizontal form-bordered">
+                        <div class="form-group">
+                            <label class="col-md-4 control-label">Default</label>
+                            <div class="col-md-8">
+                                <input type="text" id="default_rangeSlider" name="default_rangeSlider" value="" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-4 control-label">Custom Range</label>
+                            <div class="col-md-8">
+                                <input type="text" id="customRange_rangeSlider" name="default_rangeSlider" value="" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-4 control-label">Custom Values</label>
+                            <div class="col-md-8">
+                                <input type="text" id="customValue_rangeSlider" name="default_rangeSlider" value="" />
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <!-- end panel -->
+            <!-- begin panel -->
+            <div class="panel panel-inverse" data-sortable-id="form-plugins-13">
+                <div class="panel-heading">
+                    <div class="panel-heading-btn">
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
+                    </div>
+                    <h4 class="panel-title">Masked Input</h4>
+                </div>
+                <div class="panel-body panel-form">
+                    <form class="form-horizontal form-bordered">
+                        <div class="form-group">
+                            <label class="control-label col-md-4">Date</label>
+                            <div class="col-md-8">
+                                <input type="text" class="form-control" id="masked-input-date" placeholder="dd/mm/yyyy" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-md-4">Phone</label>
+                            <div class="col-md-8">
+                                <input type="text" class="form-control" id="masked-input-phone" placeholder="(999) 999-9999" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-md-4">Tax ID</label>
+                            <div class="col-md-8">
+                                <input type="text" class="form-control" id="masked-input-tid" placeholder="99-9999999" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-md-4">Product Key</label>
+                            <div class="col-md-8">
+                                <input type="text" class="form-control" id="masked-input-pkey" placeholder="a*-999-a999" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-md-4">SSN</label>
+                            <div class="col-md-8">
+                                <input type="text" class="form-control" id="masked-input-ssn" placeholder="999/99/9999" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-md-4">SSN</label>
+                            <div class="col-md-8">
+                                <input type="text" class="form-control" id="masked-input-pno" placeholder="AAA-9999-A" />
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <!-- end panel -->
+            <!-- begin panel -->
+            <div class="panel panel-inverse" data-sortable-id="form-plugins-14">
+                <div class="panel-heading">
+                    <div class="panel-heading-btn">
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
+                    </div>
+                    <h4 class="panel-title">jQuery Tag It</h4>
+                </div>
+                <div class="panel-body panel-form">
+                    <form class="form-horizontal form-bordered">
+                        <div class="form-group">
+                            <label class="control-label col-md-4">Default Tags Input with Autocomplete</label>
+                            <div class="col-md-8">
+                                <ul id="jquery-tagIt-default">
+                                    <li>Tag1</li>
+                                    <li>Tag2</li>
+                                </ul>
+                                <p>Try to enter "c++, java, php" </p>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-md-4">Inverse Theme</label>
+                            <div class="col-md-8">
+                                <ul id="jquery-tagIt-inverse" class="inverse">
+                                    <li>Tag1</li>
+                                    <li>Tag2</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-md-4">White Theme</label>
+                            <div class="col-md-8">
+                                <ul id="jquery-tagIt-white" class="white">
+                                    <li>Tag1</li>
+                                    <li>Tag2</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-md-4">Primary Theme</label>
+                            <div class="col-md-8">
+                                <ul id="jquery-tagIt-primary" class="primary">
+                                    <li>Tag1</li>
+                                    <li>Tag2</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-md-4">Info Theme</label>
+                            <div class="col-md-8">
+                                <ul id="jquery-tagIt-info" class="info">
+                                    <li>Tag1</li>
+                                    <li>Tag2</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-md-4">Success Theme</label>
+                            <div class="col-md-8">
+                                <ul id="jquery-tagIt-success" class="success">
+                                    <li>Tag1</li>
+                                    <li>Tag2</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-md-4">Warning Theme</label>
+                            <div class="col-md-8">
+                                <ul id="jquery-tagIt-warning" class="warning">
+                                    <li>Tag1</li>
+                                    <li>Tag2</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-md-4">Danger Theme</label>
+                            <div class="col-md-8">
+                                <ul id="jquery-tagIt-danger" class="danger">
+                                    <li>Tag1</li>
+                                    <li>Tag2</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <!-- end panel -->
+            <!-- begin panel -->
+            <div class="panel panel-inverse" data-sortable-id="form-plugins-15">
+                <div class="panel-heading">
+                    <div class="panel-heading-btn">
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-default" data-click="panel-expand"><i class="fa fa-expand"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-success" data-click="panel-reload"><i class="fa fa-repeat"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-warning" data-click="panel-collapse"><i class="fa fa-minus"></i></a>
+                        <a href="javascript:;" class="btn btn-xs btn-icon btn-circle btn-danger" data-click="panel-remove"><i class="fa fa-times"></i></a>
+                    </div>
+                    <h4 class="panel-title">Password Indicator</h4>
+                </div>
+                <div class="panel-body panel-form">
+                    <form class="form-horizontal form-bordered">
+                        <div class="form-group">
+                            <label class="control-label col-md-4">Password</label>
+                            <div class="col-md-8">
+                                <input type="password" name="password" id="password-indicator-default" class="form-control m-b-5" />
+                                <div id="passwordStrengthDiv" class="is0 m-t-5"></div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-md-4">Visible Password</label>
+                            <div class="col-md-8">
+                                <input type="text" name="password-visible" id="password-indicator-visible" class="form-control m-b-5" />
+                                <div id="passwordStrengthDiv2" class="is0 m-t-5"></div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <!-- end panel -->
+        </div>
+        <!-- end col-6 -->
+    </div>
+    <!-- end row -->
+</div>
+
