--- a/views/personal_crear.html
+++ b/views/personal_crear.html
@@ -1,4 +1,4 @@
-<div ng-controller="CrearPersonalController">
+<div ng-controller="personalCreaController">
     <!-- begin breadcrumb -->
     <ol class="breadcrumb pull-right">
         <li><a href="javascript:;">Home</a></li>
